List - ListCellParameters.java - Added constructor for `ListCellArea` usage
Table
- TableCellParameters.java - Added constructor for `TableCellArea` usage

Tree
- TreeNodeParameters.java - Added constructor for `TreeCellArea` usage

Style
- StyleId.java - Added `customtooltip` placeholder style

Demo
- ListTooltipExample.java - Examples for Swing and custom list tooltips
- TableTooltipExample.java - Examples for Swing and custom table tooltips
- TreeTooltipExample.java - Examples for Swing and custom tree tooltips
- demo-language.xml - Translation for new examples

General
- Minor code refactoring and JavaDoc updates

--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -435,6 +435,66 @@
                     </record>
                 </Dictionary>
             </Dictionary>
+            <Dictionary prefix="listtooltip">
+                <record key="title">
+                    <value lang="en">Tooltips in JList</value>
+                    <value lang="ru">Подсказки в JList</value>
+                </record>
+                <Dictionary prefix="swing">
+                    <record key="title">
+                        <value lang="en">Swing tooltips</value>
+                        <value lang="ru">Swing подсказки</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="custom">
+                    <record key="title">
+                        <value lang="en">Custom tooltips</value>
+                        <value lang="ru">Кастомные подсказки</value>
+                    </record>
+                </Dictionary>
+            </Dictionary>
+            <Dictionary prefix="tabletooltip">
+                <record key="title">
+                    <value lang="en">Tooltips in JTable</value>
+                    <value lang="ru">Подсказки в JTable</value>
+                </record>
+                <Dictionary prefix="swing">
+                    <record key="title">
+                        <value lang="en">Swing tooltips</value>
+                        <value lang="ru">Swing подсказки</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="custom">
+                    <record key="title">
+                        <value lang="en">Custom tooltips</value>
+                        <value lang="ru">Кастомные подсказки</value>
+                    </record>
+                </Dictionary>
+            </Dictionary>
+            <Dictionary prefix="treetooltip">
+                <record key="title">
+                    <value lang="en">Tooltips in JTree</value>
+                    <value lang="ru">Подсказки в JTree</value>
+                </record>
+                <Dictionary prefix="swing">
+                    <record key="title">
+                        <value lang="en">Swing tooltips</value>
+                        <value lang="ru">Swing подсказки</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="advanced">
+                    <record key="title">
+                        <value lang="en">Advanced Swing tooltips</value>
+                        <value lang="ru">Улучшенные Swing подсказки</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="custom">
+                    <record key="title">
+                        <value lang="en">Custom tooltips</value>
+                        <value lang="ru">Кастомные подсказки</value>
+                    </record>
+                </Dictionary>
+            </Dictionary>
         </Dictionary>
         <Dictionary prefix="buttons">
             <record key="title">
