InterfaceInspector - InterfaceInspector.java - Added a few more methods for convenient display of `InterfaceInspector` dialog, frame and popover - InterfaceInspector.java - Added `APPLICATION_EXCLUDE` modal exclusion type to allow inspector to be accessed at any time - ComponentHighlighter.java - Always returns `false` now in `contains(...)` method to avoid its detection on the window
Popup
- WebPopupWindow.java - Added Window.Type.POPUP usage limitation for Unix systems
- WebPopupWindow.java - Added clarification for each setting used

RootPane
- RootPanePainter.java - Added notifications for any windows opened along with `JRootPane` instances
- WebRootPaneUI.java - Minor code adjustments

PopOver
- PopOverPainter.java - Removed unnecessary position limitation for `Window` invoker
- PopOverPainter.java - Added notifications for any popovers opened along with `JRootPane` instances
- WebPopOver.java - Open and close events are now fired within `PopOverPainter`
- PopOverCloseListener.java - Removed as redundant

Tree
- WebTree.java - Major improvements to `scrollToNode(...)` methods, node positioning should now be much more convenient

Utilities
- WebBorder.java - Added JavaDoc clarifying that `WebBorder` usage is not recommended outside of UI and `Painter` implementations
- ProprietaryUtils.java - Removed limitation, it is now only applied where necessary

Demo
- DemoApplication.java - Displayed interface inspector will now include all visible elements across all windows
- WebPopOverExample.java - Added `WebPopOver` example, since component is not revamped for new styling system yet it is marked as `beta`
- WebInnerNotificationExample.java - Added `WebInnerNotification` example for displaying in-window notifications
- InspectorFrame.java - Allowed inspector to watch over all demo application windows
- WebPopupExample.java - Changed example identifier, adjusted popup content
- JDialogExample.java, JFrameExample.java - Added appropriate close operation actions

--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -2095,6 +2095,54 @@
                     </record>
                 </Dictionary>
             </Dictionary>
+            <Dictionary prefix="popup">
+                <record key="title">
+                    <value lang="en">WebPopup</value>
+                    <value lang="ru">WebPopup</value>
+                </record>
+                <record key="show">
+                    <value lang="en">Show popup</value>
+                    <value lang="ru">Показать попап</value>
+                </record>
+                <record key="label">
+                    <value lang="en">Sample popup with text field</value>
+                    <value lang="ru">Образец попапа с текстовым полем</value>
+                </record>
+                <record key="text">
+                    <value lang="en">Editable text</value>
+                    <value lang="ru">Редактируемый текст</value>
+                </record>
+                <Dictionary prefix="basic">
+                    <record key="title">
+                        <value lang="en">Basic popup</value>
+                        <value lang="ru">Базовый попап</value>
+                    </record>
+                </Dictionary>
+                <Dictionary prefix="undecorated">
+                    <record key="title">
+                        <value lang="en">Undecorated popup</value>
+                        <value lang="ru">Попап без декорации</value>
+                    </record>
+                </Dictionary>
+            </Dictionary>
+            <Dictionary prefix="popover">
+                <record key="title">
+                    <value lang="en">WebPopOver</value>
+                    <value lang="ru">WebPopOver</value>
+                </record>
+                <record key="show">
+                    <value lang="en">Show popover</value>
+                    <value lang="ru">Показать поповер</value>
+                </record>
+                <record key="label">
+                    <value lang="en">Sample popover with text field</value>
+                    <value lang="ru">Образец поповера с текстовым полем</value>
+                </record>
+                <record key="text">
+                    <value lang="en">Editable text</value>
+                    <value lang="ru">Редактируемый текст</value>
+                </record>
+            </Dictionary>
             <Dictionary prefix="joptionpane">
                 <record key="title">
                     <value lang="en">JOptionPane</value>
@@ -2170,36 +2218,6 @@
                     <value lang="en">You have closed the dialog</value>
                     <value lang="ru">Вы закрыли диалог</value>
                 </record>
-            </Dictionary>
-            <Dictionary prefix="webpopup">
-                <record key="title">
-                    <value lang="en">WebPopup</value>
-                    <value lang="ru">WebPopup</value>
-                </record>
-                <record key="show">
-                    <value lang="en">Show popup</value>
-                    <value lang="ru">Показать попап</value>
-                </record>
-                <record key="label">
-                    <value lang="en">Sample popup with text field</value>
-                    <value lang="ru">Образец попапа с текстовым полем</value>
-                </record>
-                <record key="text">
-                    <value lang="en">Editable text</value>
-                    <value lang="ru">Редактируемый текст</value>
-                </record>
-                <Dictionary prefix="basic">
-                    <record key="title">
-                        <value lang="en">Basic popup</value>
-                        <value lang="ru">Базовый попап</value>
-                    </record>
-                </Dictionary>
-                <Dictionary prefix="undecorated">
-                    <record key="title">
-                        <value lang="en">Undecorated popup</value>
-                        <value lang="ru">Попап без декорации</value>
-                    </record>
-                </Dictionary>
             </Dictionary>
             <Dictionary prefix="webnotification">
                 <record key="title">
