These changes are mainly focused on bringing some fixes to `WebTreeFilterField` and the way it adds extra filtering on top of the tree/model filtering. Before these changes adding `WebTreeFilterField` for a tree could have completely replaced tree's existing filter in some cases and in some would make them inconvenient to access. To avoid any issues and to clarify usage of filters provided in the trees - in `WebAsyncTree` and `WebExTree` - and filters provided within data provider implementations (per node) - `AsyncTreeDataProvider` and `ExTreeDataProvider` - I have added an extra filtering method within tree models themselves. Now there are basically three filters available - one global filter in the tree, multiple filters that you can provide in data provider (one for each parent node) and one global filter that can be set in the tree model itself. That tree model filter is not bridged into the tree to avoid its usage for common cases - tree one should be used instead at all times or provider ones if that works better for the case. Model filter exists for internal purposes like the `WebTreeFilterField` component.
I've also updated `WebExCheckBoxTree` to properly apply check states whenever filtering is applied at the same time. For now check states will ignore any filtering applied to the tree nodes (either provider filtering, tree filtering or model filtering), so if you really want to exclude some nodes from check model - filter them out before you return them in your `ExTreeDataProvider` implementation. By the way nodes returned by `CheckState` also received a similar fix - in case filtering is active hidden nodes will still be returned if you are requesting, for instance, checked ones and some of them are currently filtered out. That works for all types of filters which means that checking model will not be affected by any filters (tree/provider/model) and if you really want to avoid some data from being used by it - simply filter it out when returning child n

--- a/modules/demo/src/com/alee/demo/language/demo-language.xml
+++ b/modules/demo/src/com/alee/demo/language/demo-language.xml
@@ -2000,7 +2000,7 @@
                         </record>
                     </Dictionary>
                 </Dictionary>
-                <Dictionary prefix="webextree">
+                <Dictionary prefix="extree">
                     <record key="title">
                         <value lang="en">WebExTree</value>
                         <value lang="ru">WebExTree</value>
@@ -2024,7 +2024,7 @@
                         </record>
                     </Dictionary>
                 </Dictionary>
-                <Dictionary prefix="webasynctree">
+                <Dictionary prefix="asynctree">
                     <record key="title">
                         <value lang="en">WebAsyncTree</value>
                         <value lang="ru">WebAsyncTree</value>
@@ -2048,7 +2048,25 @@
                         </record>
                     </Dictionary>
                 </Dictionary>
-                <Dictionary prefix="webcheckboxtree">
+                <Dictionary prefix="filetree">
+                    <record key="title">
+                        <value lang="en">WebFileTree</value>
+                        <value lang="ru">WebFileTree</value>
+                    </record>
+                    <Dictionary prefix="basic">
+                        <record key="title">
+                            <value lang="en">Basic</value>
+                            <value lang="ru">Базовое</value>
+                        </record>
+                    </Dictionary>
+                    <Dictionary prefix="editable">
+                        <record key="title">
+                            <value lang="en">Editable</value>
+                            <value lang="ru">Редактируемое</value>
+                        </record>
+                    </Dictionary>
+                </Dictionary>
+                <Dictionary prefix="checkboxtree">
                     <record key="title">
                         <value lang="en">WebCheckBoxTree</value>
                         <value lang="ru">WebCheckBoxTree</value>
@@ -2063,6 +2081,48 @@
                         <record key="title">
                             <value lang="en">Customized</value>
                             <value lang="ru">Кастомизированное</value>
+                        </record>
+                    </Dictionary>
+                </Dictionary>
+                <Dictionary prefix="excheckboxtree">
+                    <record key="title">
+                        <value lang="en">WebExCheckBoxTree</value>
+                        <value lang="ru">WebExCheckBoxTree</value>
+                    </record>
+                    <Dictionary prefix="basic">
+                        <record key="title">
+                            <value lang="en">Basic</value>
+                            <value lang="ru">Базовое</value>
+                        </record>
+                    </Dictionary>
+                    <Dictionary prefix="custom">
+                        <record key="title">
+                            <value lang="en">Customized</value>
+                            <value lang="ru">Кастомизированное</value>
+                        </record>
+                    </Dictionary>
+                </Dictionary>
+                <Dictionary prefix="treefilterfield">
+                    <record key="title">
+                        <value lang="en">WebTreeFilterField</value>
+                        <value lang="ru">WebTreeFilterField</value>
+                    </record>
+                    <Dictionary prefix="extree">
+                        <record key="title">
+                            <value lang="en">WebExTree</value>
+                            <value lang="ru">WebExTree</value>
+                        </record>
+                    </Dictionary>
+                    <Dictionary prefix="asynctree">
+                        <record key="title">
+                            <value lang="en">WebAsyncTree</value>
+                            <value lang="ru">WebAsyncTree</value>
+                        </record>
+                    </Dictionary>
+                    <Dictionary prefix="excheckboxtree">
+                        <record key="title">
+                            <value lang="en">WebExCheckBoxTree</value>
+                            <value lang="ru">WebExCheckBoxTree</value>
                         </record>
                     </Dictionary>
                 </Dictionary>
